# storyline

./: .gitignore  README.md  meson.build
data/: github.teamcons.storyline.appdata.xml.in  github.teamcons.storyline.desktop.in  meson.build  storyline.gresource.xml  ui.github.teamcons.storyline.gschema.xml
data/plugin/font/: mono.css
data/schemes/: io.github.teamcons.storyline-dark.xml  io.github.teamcons.storyline-sepia.xml  io.github.teamcons.storyline.xml
data/styles/: app-main-stylesheet.css  app-stylesheet-dark.css  app-stylesheet-sepia.css  app-stylesheet.css
po/: README.md  ca.po  da.po  de.po  eo.po  es.po  fr.po  io.github.teamcons.storyline.pot  it.po  ja.po  lt.po  nl.po  pl.po  pt_BR.po  ru.po
po/extra/: POTFILES  ca.po  da.po  de.po  eo.po  es.po  extra.pot  fr.po  io.github.teamcons.storyline.pot  it.po  ja.po  lt.po  nl.po  pl.po  pt_BR.po  ru.po
src/: Application.vala  MainWindow.vala
src/Constants/: AppSettings.vala
src/Plugins/: Checkbox.vala  CheckboxChecked.vala  Filep.vala  Highlighter.vala  Image.vala  Plugin.vala  PluginManager.vala  Subscript.vala  Superscript.vala
src/Services/: DialogUtils.vala  ExportUtils.vala  FileManager.vala
src/Styles/: quilter.vala  quilterdark.vala  quiltersepia.vala
src/Widgets/: Cheatsheet.vala  HeaderBar.vala  Preferences.vala  SearchBar.vala  SideBar.vala  SideBarBox.vala  SourceView.vala  StatusBar.vala  WebView.vala
